--- a/AIsettings.html
+++ b/AIsettings.html
@@ -164,10 +164,6 @@
             قائمة التواصل
           </a>
           <!-- ✅ END NEW ITEM -->
-          <!-- ✅ END NEW ITEM -->
-          <!-- ✅ END NEW ITEM -->
-          <!-- ✅ END NEW ITEM -->
-          <!-- ✅ END NEW ITEM -->
 
           <a href="AIsettings.html" class="active">
             <i class="fa-solid fa-robot"></i>
@@ -266,13 +262,18 @@
       const SUPABASE_URL = "https://ylsbmxedhycjqaorjkvm.supabase.co";
       const SUPABASE_KEY =
         "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inlsc2JteGVkaHljanFhb3Jqa3ZtIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA4MTk5NTUsImV4cCI6MjA3NjM5NTk1NX0.W61xOww2neu6RA4yCJUob66p4OfYcgLSVw3m3yttz1E";
-      const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
+
+      // ✅ FIXED: Using supabaseClient instead of supabase to match dashboard.html
+      const supabaseClient = window.supabase.createClient(
+        SUPABASE_URL,
+        SUPABASE_KEY
+      );
 
       async function login() {
         const email = document.getElementById("email").value.trim();
         const password = document.getElementById("password").value.trim();
 
-        const { data } = await supabase
+        const { data } = await supabaseClient
           .from("admin_auth")
           .select("*")
           .eq("email", email)
